<resources xmlns:ns0="http://schemas.android.com/tools">
    <string name="app_name">Petreco</string>
    <string name="app_name_cap">PETRECO</string>
    <string name="app_des">pet\'s breed recognization application</string>
    <string name="register_hint">Don\'t have an account?</string>
    <string name="reset_password">Reset password</string>
    <string name="mail_hint">Email address</string>
    <string name="pass_hint">Password</string>
    <string name="repass_hint">Re-enter password</string>
    <string name="register">Register New Account</string>
    <string name="confirm">Confirm OTP</string>
    <string name="confirm_btn">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="forgotPass">Forgot password</string>
    <string name="tab_pets_breeds">Pet Breeds</string>
    <string name="tab_profile">Profile</string>
    <string name="send_reset_password">Send reset email</string>
    <string name="loading_url" ns0:ignore="TypographyDashes">https://lottie.host/74f568fb-861c-43ba-8282-636b8b431419/qDBDxYUxzy.json</string>
    <string name="register_btn">Register</string>
    <string name="find_breed_btn">Find in shops</string>
    <string name="signup">Signup Here</string>
    <string name="welcome">Welcome Back</string>
    <string name="login">Login</string>
    <string name="base_url">http://10.129.50.145:8080/</string>
    <string name="open_camera">Camera</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="about_us">About us</string>
    <string name="current_pass_hint">Current password</string>
    <string name="new_pass_hint">New password</string>
    <string name="reenter_new_pass_hint">Re-enter new password</string>
    <string name="change_button">Change</string>
    <string name="member_Lan">21110837 - Nguyen Quoc Lan</string>
    <string name="member_Dang">21110164 - Dinh Dai Hai Dang</string>
    <string name="member_Thong">21110313 - Nguyen Duong Tien Thong</string>
</resources>