<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_home"
    >

    <ImageView
        android:id="@+id/eclipse"
        android:layout_width="1200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="@id/cathome"
        app:layout_constraintLeft_toLeftOf="@id/cathome"
        app:layout_constraintRight_toRightOf="@id/cathome"
        app:layout_constraintTop_toTopOf="@id/cathome"
        app:srcCompat="@drawable/eclipse" />

    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="300dp"
        android:id="@+id/cathome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cat_home"
        />

    <Button
        android:onClick="openLoginPage"
        app:layout_constraintTop_toTopOf="@id/eclipse"
        app:layout_constraintBottom_toBottomOf="@id/eclipse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:backgroundTint="@color/button_login"
        android:textSize="16sp"
        android:fontFamily="@font/inter_bold"/>

    <Button
        app:layout_constraintTop_toTopOf="@id/eclipse"
        app:layout_constraintBottom_toBottomOf="@id/eclipse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/buttonSignUp"
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:onClick="openRegPage"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/inter_reg"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/buttonLogin"
        app:layout_constraintLeft_toLeftOf="@id/buttonLogin"
        app:layout_constraintRight_toRightOf="@id/buttonLogin"
        android:fontFamily="@font/italiana_reg"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:padding="6dp"
        android:id="@+id/app_title"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        android:text="@string/app_name_cap"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonSignUp"
        app:layout_constraintLeft_toLeftOf="@id/buttonSignUp"
        app:layout_constraintRight_toRightOf="@id/buttonSignUp"
        android:fontFamily="@font/inter_reg"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/register_hint"
        android:layout_marginBottom="18dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/app_title"
        app:layout_constraintLeft_toLeftOf="@id/app_title"
        app:layout_constraintRight_toRightOf="@id/app_title"
        android:fontFamily="@font/inter_reg"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/app_des"
        />
</androidx.constraintlayout.widget.ConstraintLayout>