<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app_in_use"
    tools:context=".ui.ConfirmActivity">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaisei_reg"
            android:gravity="center"
            android:shadowColor="@color/shadow"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/confirm"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.mukeshsolanki.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_bold"
            android:inputType="number"
            android:textColor="@color/brown"
            app:OtpHideLineWhenFilled="false"
            app:OtpItemCount="6"
            app:OtpItemSpacing="6dp"
            app:OtpLineColor="@color/background_home"
            app:OtpState_filled="true"
            app:OtpViewType="line" />

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/italiana_reg"
            android:onClick="confirmOTP"
            android:text="@string/confirm_btn"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/button"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:onClick="resendOTP"
            android:textColor="@color/blue"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/resend_otp" />

    </LinearLayout>

    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="300dp"
        android:id="@+id/wave"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/wave"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/catndogs"
        app:layout_constraintLeft_toLeftOf="@id/catndogs"
        app:layout_constraintRight_toRightOf="@id/catndogs"
        android:fontFamily="@font/italiana_reg"
        android:textSize="55sp"
        android:textColor="@color/white"
        android:id="@+id/app_title"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/catndogs"
        android:layout_marginBottom="175dp"
        android:text="@string/app_name_cap"
        />
    <ImageView
        app:layout_constraintLeft_toLeftOf="@id/wave"
        app:layout_constraintTop_toTopOf="@id/wave"
        app:layout_constraintRight_toRightOf="@id/wave"
        android:id="@+id/catndogs"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cats_n_dogs"
        />

</androidx.constraintlayout.widget.ConstraintLayout>